# gadis

./: README.md  amplify.yml  deploy.sh
.github/: filters.yml  lambda-deploy-file-filter.yaml
.github/workflows/: bot_deploy.yml  ec2_deploy.yml  frontend_deploy.yml  frontend_lint.yaml  lambda_deploy.yaml  lambda_lint.yaml  lint.yaml
bot/: .gitignore  appspec.yml  buildspec.yml
bot/gadis_bot/: Cargo.toml
bot/gadis_provider/: Cargo.toml
bot/gadis_provider/gadis_api/: Cargo.toml
bot/gadis_provider/gadis_api/src/: entity.rs  lib.rs  setup.rs
bot/gadis_provider/gadis_api/src/controller/: console.rs  mod.rs  warp.rs
bot/gadis_provider/gadis_api/src/gateway/: mod.rs
bot/gadis_provider/gadis_api/src/presenter/: mod.rs
bot/gadis_provider/gadis_api/src/setup/: initialize.rs  mod.rs
bot/gadis_provider/gadis_api/src/usecase/: mod.rs
bot/gadis_provider/gadis_bot/: Cargo.toml
bot/gadis_provider/gadis_bot/src/: entity.rs  lib.rs  setup.rs
bot/gadis_provider/gadis_bot/src/controller/: mod.rs
bot/gadis_provider/gadis_bot/src/gateway/: mock.rs  mod.rs
bot/gadis_provider/gadis_bot/src/presenter/: mod.rs
bot/gadis_provider/gadis_bot/src/setup/: initialize.rs  mod.rs
bot/gadis_provider/gadis_bot/src/usecase/: mod.rs
bot/gadis_provider/src/: main.rs
bot/hooks/: start.sh  stop.sh
bot/lifetime_scripts/: start.sh  stop.sh
frontend/: .eslintrc.js  .stylelintrc.js  babel.config.js  package.json  pnpm-lock.yaml  tsconfig.json  webpack.config.ts
lambda/: .eslintrc.js  .gitignore  package.json  pnpm-lock.yaml  tsconfig.common.json  webpack.config.common.ts
(+14 files in other folders)
