[package]
name = "gadis_provider"
version = "0.1.0"
authors = ["loxygenK <me@loxygen.dev>"]
edition = "2018"

[workspace]
members = [
  "gadis_api",
  "gadis_bot"
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gadis_api = { path = "gadis_api/" }
gadis_bot = { path = "gadis_bot/" }
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
