[package]
authors = ["loxygenK <me@loxygen.dev>"]
edition = "2018"
name = "gadis_api"
version = "0.1.0"

[dependencies]
async-trait = "*"
tokio = { version = "*", features = ["rt", "rt-multi-thread", "macros"] }
warp = "*"

[features]
default = ["prod"]
client-warp = []
client-console = []

prod = ["client-warp"]
dev = ["client-console"]
